src/styles/global.css
html {
  background-color: #fff;
  font-family: 'Montserrat', sans-serif;
}

html.dark {
  background-color: #1D2225;
  color: #fff;
}

.dark p {
  color: #c2c2c2;
}

.dark .nav-links a {
  color: #fff;
}

.dark header {
  background-color: #1b1d1e;
  border-bottom: 1px solid #282b2b;
}

body {
  margin: 0;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

h1 {
  margin: 0;
  font-size: 3.5rem;
  line-height: 1.35em;
  font-weight: 600;
  text-align: center;
  padding-bottom: 1.5rem;
}

h2 {
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.35em;
  font-weight: 600;
  text-align: left;

  &.section {
    margin-bottom: 24px;
  }
}

h3 {
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.35em;
  font-weight: 600;
  text-align: left;

  &.section {
    margin-bottom: 24px;
  }
}

h4 {
  font-weight: 600;
}

a:visited {
  color: inherit;
}

section {
  position: relative;
  display: grid;
  padding-top: 64px;
  padding-bottom: 64px;
  justify-content: center;
}

.paragraph-section {
  padding-bottom: 32px;
}

.text-centre {
  text-align: center;
}

.body-display {
  color: #627481;
  font-size: 1rem;
  line-height: 1.5em;

  &.small {
    font-size: 0.875rem;
    line-height: 1.5em;
  }

  &.large {
    font-size: 1.25rem;
    line-height: 1.5em;
  }

  &.dual-paragraph {
    column-count: 1;
  }
}

.body-caption {
  color: #627481;
  font-size: 0.875rem;
  line-height: 1.5em;
  padding-top: 12px;
}

.subtitle {
  color: #627481;
  font-size: 0.75rem;
  letter-spacing: 4px;
  text-transform: uppercase;
}

.container {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}


/* navigation styles */

header {
  height: 64px;
  width: 100%;
  background-color: #fff;
  border-bottom: 1px solid #d6e3e7;
}

.hamburger {
  margin-right: 20px;
  cursor: pointer;
}

.nav-links {
  width: 100%;
  display: none;
  margin: 0;
}

.nav-links a {
  display: block;
  text-align: center;
  padding: 8px 16px;
  text-decoration: none;
  font-size: 1.2rem;
  color: #000;
  position: relative;
  outline: none !important;
  text-transform: uppercase;
  letter-spacing: 4px;
  transition: 0.2s;
}

.nav-links a:hover,
.nav-links a:focus {
  color: #3c0fef;
}

.nav-link:hover::after,
.nav-link:focus::after {
  background-color: #3c0fef;
  width: 100%;
}

a {
  text-decoration: none;
  margin: 12px 0;
}

.nav-link::after {
  content: "";
  background-color: black;
  position: absolute;
  bottom: 0;
  left: 0;
  height: 2px;
  width: 0;
  transition: 0.2s;
}

.expanded {
  display: unset;
}


@media screen and (min-width: 375px) {

  .header-wrapper,
  .container {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  section {
    padding-top: 64px;
    padding-bottom: 64px;
  }

  h1 {
    font-size: 2.5rem;
  }
}

@media screen and (min-width: 640px) {

  .header-wrapper,
  .container {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media screen and (min-width: 768px) {

  .header-wrapper,
  .container {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .nav-links {
    display: block;
    position: static;
    width: auto;
    background: none;
  }

  .nav-links a {
    display: inline-block;
    padding: 15px 20px;
  }

  .hamburger {
    display: none;
  }

  section {
    position: relative;
    display: flex;
    padding-top: 80px;
    padding-bottom: 80px;
  }

  .body-display {
    &.dual-paragraph {
      column-count: 2;
      column-gap: 64px;
    }
  }
}

@media screen and (min-width: 1024px) {

  .header-wrapper,
  .container {
    max-width: 1024px;
  }
}

@media screen and (min-width: 1280px) {

  .header-wrapper,
  .container {
    max-width: 1280px;
  }

  section {
    padding-bottom: 128px;
  }
}

